[package]
name = "atomr-infer-runtime-anthropic"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/atomr-infer-runtime-anthropic"
description            = "Anthropic Messages API provider for atomr-infer — implements ModelRunner against api.anthropic.com, with cost table, error classification, and SSE streaming."

[lib]
name = "atomr_infer_runtime_anthropic"
[dependencies]
atomr-infer-core        = { workspace = true }
atomr-infer-runtime     = { workspace = true }
atomr-infer-remote-core = { workspace = true }

reqwest      = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
futures-util = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
secrecy      = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true, features = ["serde"] }
arc-swap     = { workspace = true }
once_cell    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
