[package]
name = "inference-runtime-cudarc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# Wires the runner to rakka-accel's BlasActor + DeviceActor substrate
# (doc §3.1 row "cudarc"). Enabling this feature pulls cudarc and
# rakka-accel into the dependency graph; remote-only builds keep both
# out by leaving the feature off.
cudarc  = ["dep:cudarc", "dep:rakka-accel"]

[dependencies]
inference-core    = { workspace = true }
inference-runtime = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
cudarc            = { workspace = true, optional = true }
rakka-accel        = { workspace = true, optional = true }
