[package]
name = "atomr-infer-runtime-cudarc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
description            = "Direct CUDA kernel dispatch for atomr-infer via cudarc + atomr-accel-cuda. Feature-gated; default-features-off compiles to a typed-error stub."

[features]
default = []
# Wires the runner to atomr-accel's BlasActor + DeviceActor substrate
# (doc §3.1 row "cudarc"). Enabling this feature pulls cudarc and
# atomr-accel into the dependency graph; remote-only builds keep both
# out by leaving the feature off.
cudarc  = ["dep:cudarc", "dep:atomr-accel"]

[dependencies]
atomr-infer-core    = { workspace = true }
atomr-infer-runtime = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
cudarc            = { workspace = true, optional = true }
atomr-accel       = { workspace = true, optional = true }
