[package]
name = "atomr-infer-runtime-elevenlabs"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/atomr-infer-runtime-elevenlabs"
description            = "ElevenLabs text-to-speech runtime for atomr-infer. Implements SpeechRunner against /v1/text-to-speech with HTTPS batch + WebSocket streaming (alignment frames), voice-cloning multipart upload, and shared atomr-infer-runtime-ws-core transport."

[lib]
name = "atomr_infer_runtime_elevenlabs"

[features]
default = []

# Umbrella feature — pulls in real HTTP / WS client deps. Without it
# the crate compiles to a stub whose `speak` returns
# `InferenceError::Internal("tts-elevenlabs feature disabled at build time")`,
# so the workspace stays remote-only-buildable.
tts-elevenlabs = [
    "dep:reqwest",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:futures",
    "dep:futures-util",
    "dep:serde",
    "dep:serde_json",
    "dep:secrecy",
    "dep:url",
    "dep:bytes",
    "dep:tracing",
    "dep:arc-swap",
    "dep:base64",
    "dep:atomr-infer-runtime-ws-core",
    "dep:atomr-infer-remote-core",
]

[dependencies]
atomr-infer-core             = { workspace = true }
async-trait                  = { workspace = true }
thiserror                    = { workspace = true }

atomr-infer-runtime-ws-core  = { workspace = true, optional = true }
atomr-infer-remote-core      = { workspace = true, optional = true }
reqwest                      = { workspace = true, optional = true, features = ["multipart"] }
tokio                        = { workspace = true, optional = true }
tokio-stream                 = { workspace = true, optional = true }
futures                      = { workspace = true, optional = true }
futures-util                 = { workspace = true, optional = true }
serde                        = { workspace = true, optional = true }
serde_json                   = { workspace = true, optional = true }
secrecy                      = { workspace = true, optional = true }
url                          = { workspace = true, optional = true, features = ["serde"] }
bytes                        = { workspace = true, optional = true }
tracing                      = { workspace = true, optional = true }
arc-swap                     = { workspace = true, optional = true }
base64                       = { workspace = true, optional = true }

[dev-dependencies]
atomr-infer-core    = { workspace = true }
atomr-infer-testkit = { workspace = true }
atomr-infer-remote-core = { workspace = true }
atomr-infer-runtime-ws-core = { workspace = true }
futures             = { workspace = true }
tokio               = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock            = { workspace = true }
bytes               = { workspace = true }
secrecy             = { workspace = true }
url                 = { workspace = true }
arc-swap            = { workspace = true }
serde_json          = { workspace = true }
base64              = { workspace = true }
tokio-tungstenite   = { workspace = true }
