[package]
name                   = "rakka-inference-runtime-litellm"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/rakka-inference-runtime-litellm"
description            = "LiteLLM proxy provider for rakka-inference — implements ModelRunner against the LiteLLM unified API gateway, fronting OpenAI-compatible endpoints for any provider LiteLLM supports."

[lib]
name = "inference_runtime_litellm"

[dependencies]
inference-core           = { workspace = true }
inference-runtime        = { workspace = true }
inference-remote-core    = { workspace = true }
inference-runtime-openai = { workspace = true }

async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
url         = { workspace = true, features = ["serde"] }
arc-swap    = { workspace = true }
