[package]
name = "atomr-infer-runtime-litellm"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/atomr-infer-runtime-litellm"
description            = "LiteLLM proxy provider for atomr-infer — implements ModelRunner against the LiteLLM unified API gateway, fronting OpenAI-compatible endpoints for any provider LiteLLM supports."

[lib]
name = "atomr_infer_runtime_litellm"
[dependencies]
atomr-infer-core           = { workspace = true }
atomr-infer-runtime        = { workspace = true }
atomr-infer-remote-core    = { workspace = true }
atomr-infer-runtime-openai = { workspace = true }

async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
url         = { workspace = true, features = ["serde"] }
arc-swap    = { workspace = true }
