[package]
name = "atomr-infer-runtime-mistralrs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default   = []
mistralrs = ["dep:mistralrs"]

[dependencies]
atomr-infer-core    = { workspace = true }
atomr-infer-runtime = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
mistralrs         = { workspace = true, optional = true }
