[package]
name = "atomr-infer-runtime-moss"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/atomr-infer-runtime-moss"
description            = "MOSS-TTS local TTS runtime for atomr-infer. Linux-only transformer-based TTS implementing the SpeechRunner trait."

[lib]
name = "atomr_infer_runtime_moss"

[features]
default = []

# Umbrella: when the feature is on, the real path is compiled.
# Without this feature the crate compiles but `MossRunner::speak` returns
# `InferenceError::Internal("tts-moss feature disabled at build time")`.
# On non-Linux platforms the feature-on path compiles but returns
# `Internal("tts-moss requires Linux")`.
tts-moss = [
    "dep:tokio",
    "dep:tokio-stream",
    "dep:futures",
    "dep:tracing",
]

[dependencies]
atomr-infer-core = { workspace = true }
async-trait      = { workspace = true }
bytes            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }

tokio        = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
futures      = { workspace = true, optional = true }
tracing      = { workspace = true, optional = true }

[dev-dependencies]
atomr-infer-core = { workspace = true }
futures          = { workspace = true }
tokio            = { workspace = true, features = ["macros", "rt"] }
