[package]
name = "atomr-infer-runtime-openai-realtime"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/atomr-infer-runtime-openai-realtime"
description            = "OpenAI Realtime API provider for atomr-infer — bidirectional WSS realtime speech sessions (gpt-4o-realtime-preview)."

[lib]
name = "atomr_infer_runtime_openai_realtime"

[features]
default = []
## Enable the real OpenAI Realtime adapter.  Without this feature the
## runner returns `InferenceError::Internal("tts-openai-realtime feature
## disabled at build time")`.
tts-openai-realtime = []

[dependencies]
atomr-infer-core         = { workspace = true }
atomr-infer-runtime-ws-core = { path = "../inference-runtime-ws-core", version = "0.8.0" }

tokio        = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
futures-util = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
secrecy      = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
once_cell    = { workspace = true }
base64       = "0.22"

[dev-dependencies]
atomr-infer-testkit = { workspace = true }
tokio               = { workspace = true }
serde_json          = { workspace = true }
base64              = "0.22"
tokio-tungstenite   = { version = "0.28" }
