[package]
name = "atomr-infer-runtime-openai-stt"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/atomr-infer-runtime-openai-stt"
description            = "OpenAI speech-to-text runtime for atomr-infer. Implements AudioRunner against /v1/audio/transcriptions with multipart upload, OpenAI-compatible retry classification, and verbose-JSON segment splitting."

[lib]
name = "atomr_infer_runtime_openai_stt"

[features]
default = []

# Umbrella feature — pulls in real HTTP client deps. Without it the
# crate compiles to a stub whose `execute_audio` returns
# `InferenceError::Internal("stt-openai feature disabled at build time")`,
# so the workspace stays remote-only-buildable.
stt-openai = [
    "dep:reqwest",
    "dep:tokio",
    "dep:futures",
    "dep:serde",
    "dep:serde_json",
    "dep:secrecy",
    "dep:url",
    "dep:bytes",
    "dep:tracing",
    "dep:arc-swap",
    "dep:atomr-infer-runtime-openai",
    "dep:atomr-infer-remote-core",
]

[dependencies]
atomr-infer-core             = { workspace = true }
async-trait                  = { workspace = true }
thiserror                    = { workspace = true }

atomr-infer-runtime-openai   = { workspace = true, optional = true }
atomr-infer-remote-core      = { workspace = true, optional = true }
reqwest                      = { workspace = true, optional = true, features = ["multipart"] }
tokio                        = { workspace = true, optional = true }
futures                      = { workspace = true, optional = true }
serde                        = { workspace = true, optional = true }
serde_json                   = { workspace = true, optional = true }
secrecy                      = { workspace = true, optional = true }
url                          = { workspace = true, optional = true, features = ["serde"] }
bytes                        = { workspace = true, optional = true }
tracing                      = { workspace = true, optional = true }
arc-swap                     = { workspace = true, optional = true }

[dev-dependencies]
atomr-infer-core    = { workspace = true }
atomr-infer-testkit = { workspace = true }
atomr-infer-remote-core = { workspace = true }
futures             = { workspace = true }
tokio               = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock            = { workspace = true }
bytes               = { workspace = true }
secrecy             = { workspace = true }
url                 = { workspace = true }
arc-swap            = { workspace = true }
serde_json          = { workspace = true }
