[package]
name                   = "rakka-inference-runtime-openai"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/rakka-inference-runtime-openai"
description            = "OpenAI Chat Completions provider for rakka-inference — implements ModelRunner against api.openai.com, with cost table, error classification, and SSE streaming."

[lib]
name = "inference_runtime_openai"

[dependencies]
inference-core        = { workspace = true }
inference-runtime     = { workspace = true }
inference-remote-core = { workspace = true }

reqwest    = { workspace = true }
tokio      = { workspace = true }
async-trait = { workspace = true }
futures    = { workspace = true }
futures-util = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
secrecy    = { workspace = true }
tracing    = { workspace = true }
url        = { workspace = true, features = ["serde"] }
bytes      = { workspace = true }
thiserror  = { workspace = true }
arc-swap   = { workspace = true }
once_cell  = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio    = { workspace = true }
