[package]
name = "atomr-infer-runtime-openai"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
documentation          = "https://docs.rs/atomr-infer-runtime-openai"
description            = "OpenAI Chat Completions provider for atomr-infer — implements ModelRunner against api.openai.com, with cost table, error classification, and SSE streaming."

[lib]
name = "atomr_infer_runtime_openai"
[dependencies]
atomr-infer-core        = { workspace = true }
atomr-infer-runtime     = { workspace = true }
atomr-infer-remote-core = { workspace = true }

reqwest    = { workspace = true }
tokio      = { workspace = true }
async-trait = { workspace = true }
futures    = { workspace = true }
futures-util = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
secrecy    = { workspace = true }
tracing    = { workspace = true }
url        = { workspace = true, features = ["serde"] }
bytes      = { workspace = true }
thiserror  = { workspace = true }
arc-swap   = { workspace = true }
once_cell  = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio    = { workspace = true }
