[package]
name = "inference-runtime-ort"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
ort     = ["dep:ort"]

[dependencies]
inference-core    = { workspace = true }
inference-runtime = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
ort               = { workspace = true, optional = true }
