[package]
name = "atomr-infer-runtime-ort"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
description            = "ONNX Runtime backend for atomr-infer (Whisper, embeddings, rerankers) via the ort crate. Feature-gated."

[features]
default = []
ort     = ["dep:ort"]

[dependencies]
atomr-infer-core    = { workspace = true }
atomr-infer-runtime = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
ort               = { workspace = true, optional = true }
